# proj_w6100_rp2350

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakePresets.json.bak1  CMakePresets.json.bak2  README.md  efu_fw_upload_v12.py  ota_send_v11.py  ota_send_v12.py  run_kitchen.sh  run_stairs.sh  run_tree.sh  table.json  table.uf2  tmp_absolute.md  tmp_app.md  w6100_part.uf2  w6100_part2.uf2  w6100_part_layout_app.uf2  w6100_part_layout_app2.uf2  w6100_partitions_v2.json
.github/: copilot-instructions.md
back/: c_cpp_properties.json
back2_build/: .ninja_deps  .ninja_log  CMakeCache.txt  compile_commands.json
back2_build/.cmake/api/v1/reply/: cmakeFiles-v1-3e1b0fc97dc7b2a5b4d9.json  codemodel-v2-0940e2a48d66227b82c0.json  directory-WIZnet-PICO-C.libraries-Debug-4ae3f6c0a0ed4e89b61b.json  directory-layout_seeder-Debug-32ec60d3cbff6e29d539.json  directory-mbedtls.3rdparty-Debug-b79174791233fb421b9b.json  directory-mbedtls.pkgconfig-Debug-05dfb16350034faa0cd4.json  directory-pico-sdk-Debug-3449edc807de59d802cf.json  directory-pico-sdk.src.common.boot_picobin_headers-Debug-a032ea618c8b86c0fd5e.json  directory-pico-sdk.src.common.boot_uf2_headers-Debug-33469fbc48db0ef8ae60.json  directory-pico-sdk.src.common.hardware_claim-Debug-6bcb480348dfa2bea93f.json  directory-pico-sdk.src.common.pico_base_headers-Debug-5828162ef67068ad7792.json  directory-pico-sdk.src.common.pico_stdlib_headers-Debug-7a4cdb73ca4e9abbb5b0.json  directory-pico-sdk.src.common.pico_usb_reset_interface_headers-Debug-d00c8f9092269a217842.json  directory-pico-sdk.src.common.pico_util-Debug-171e82472fb0c123d2fb.json  directory-pico-sdk.src.rp2350.boot_stage2-Debug-d5441e45385e65451ac5.json  directory-pico-sdk.src.rp2350.hardware_regs-Debug-60077666de7363cb7beb.json  directory-pico-sdk.src.rp2350.hardware_structs-Debug-501135210d6d8fdddc7e.json  directory-pico-sdk.src.rp2350.pico_platform-Debug-017e2621bbe93090d830.json  directory-pico-sdk.src.rp2_common.boot_bootrom_headers-Debug-16d43ae006f09de91f74.json  directory-pico-sdk.src.rp2_common.cmsis-Debug-b83a5d645b53feee62e0.json  directory-pico-sdk.src.rp2_common.hardware_boot_lock-Debug-5ec82109cec6c29b9e61.json  directory-pico-sdk.src.rp2_common.hardware_dma-Debug-b5be4ba4fefa1316655d.json  directory-pico-sdk.src.rp2_common.hardware_gpio-Debug-d9b9e3bd433ebaffcacf.json  directory-pico-sdk.src.rp2_common.hardware_interp-Debug-3287d4ba297256687995.json  directory-pico-sdk.src.rp2_common.hardware_pio-Debug-80c46fe68672bfec75a9.json  (+59 more)
back2_build/mbedtls/: cmake_install.cmake
back2_build/mbedtls/include/: cmake_install.cmake
back2_build/pico-sdk/docs/: cmake_install.cmake
back2_build/pico-sdk/tools/: cmake_install.cmake
back2_build/pioasm/: .ninja_deps  .ninja_log  build.ninja  cmake_install.cmake
back2_build/pioasm-install/pioasm/: pioasm
back2_build/stairs_ws2815/: cmake_install.cmake
back_build/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
back_build/WIZnet-PICO-C/libraries/: cmake_install.cmake
back_build/layout_seeder/: cmake_install.cmake  w6100_part_layout.dis  w6100_part_layout.elf  w6100_part_layout.elf.map  w6100_part_layout.hex
back_build/mbedtls/framework/: cmake_install.cmake
back_build/mbedtls/pkgconfig/: cmake_install.cmake
back_build/pico-sdk/: cmake_install.cmake
back_build/pico-sdk/src/: cmake_install.cmake
back_build/pioasm/: .ninja_deps  .ninja_log  CMakeCache.txt  install_manifest.txt
back_build/port/: can.pio.h  cmake_install.cmake
back_build/scd30_meter/: cmake_install.cmake  proj_scd30_meter.dis  proj_scd30_meter.elf  proj_scd30_meter.elf.map  proj_scd30_meter.hex  proj_scd30_meter.uf2
back_build/stairs_ws2815/: proj_stairs_ws2815.dis  proj_stairs_ws2815.elf.map  proj_stairs_ws2815.hex  proj_stairs_ws2815.uf2
common/: CMakeLists.txt
common/board/: partition.h
common/efu/: config_efu.h  efu_update.c  efu_update.h
common/flash/: flash_cfg.c  flash_cfg.h
common/network/: network.c  network.h  tcp_cli.c  tcp_cli.h
common/utils/: utility.c
common/wiznet/: wizchip_custom.c  wiznet_socket.h
kitchen_pwm/: CMakeLists.txt  config.h  config_kitchen.h  efu_update.c  efu_update.h  flash_cfg.c  main.c  network.c  partition.c  partition.h  pwm_api.c  pwm_api.h  pwm_drv.c  pwm_drv.h  rd03d_api.c  rd03d_api.h  rd03d_api_pre.c  rd03d_cli.c  rd03d_cli.h  rd03d_drv.c  rd03d_drv.h  rd03d_drv_pre.c  rd03d_protocol.h  telnet.c  telnet.h  utility.c  utility.h  vl53_diag.c  vl53_diag.h  vl53l8cx_api.c  vl53l8cx_api.h  vl53l8cx_buffers.h  vl53l8cx_drv.c  vl53l8cx_platform.c  vl53l8cx_platform.h  w6100_partitions.json  wizchip_custom.c
layout_seeder/: CMakeLists.txt  layout_seed.c
libraries/: CMakeLists.txt  README.md  wiznet_config.h
libraries/ioLibrary_Driver/Ethernet/: wizchip_conf.h
libraries/ioLibrary_Driver/Ethernet/W6100/: w6100.c  w6100.h
libraries/ioLibrary_Driver/Internet/AAC/: AddressAutoConfig.c
libraries/ioLibrary_Driver/Internet/DHCP6/: dhcpv6.c
libraries/port/: CMakeLists.txt
libraries/port/ioLibrary_Driver/inc/: wizchip_spi.h
libraries/port/ioLibrary_Driver/src/: wizchip_spi.c
libraries/port/mbedtls/inc/: ssl_config.h
scd30_meter/: CMakeLists.txt  main.c
scripts/: send_ddp_test.py  send_udp_minimal.py
stairs_ws2815/: CMakeLists.txt  config.h  efu_update.c  eth_ota_update.c  eth_ota_update.h  flash_cfg.c  led_pattern.c  led_pattern.h  main.c  network.c  network.h  partition.c  partition.h  telnet.c  utility.c  wizchip_custom.c  wizchip_custom.h  ws2815.pio  ws2815_control_dma_parallel.c  ws2815_control_dma_parallel.h
tree_ws2815/: CMakeLists.txt  README.md  config.h  config_tree.h  efu_update.c  flash_cfg.c  flash_cfg.h  led_pattern.c  led_pattern.h  main.c  network.c  network.h  partition.c  partition.h  telnet.c  telnet.h  utility.c  utility.h  vl53_diag.c  vl53l8cx_api.c  vl53l8cx_drv.c  vl53l8cx_drv.h  vl53l8cx_platform.c  wizchip_custom.c  ws2815.pio  ws2815_control_1pin.c  ws2815_control_1pin.h  ws2815_control_1pin_back.c  ws2815_control_dma.c  ws2815_control_dma.h  ws2815_control_dma_1pin.c
(+182 files in other folders)
