set(TARGET_NAME tree_leds)

# simpler solution mostly for single-source projects, not needed target_sources
#add_executable(${TARGET_NAME}
#        main.c<F10>
#)

add_executable(${TARGET_NAME})

set(PIO_OUTPUT_DIR ${CMAKE_CURRENT_BINARY_DIR}/generated)  # for the generated pio header
pico_generate_pio_header(${TARGET_NAME}
    ${CMAKE_CURRENT_LIST_DIR}/ws2815.pio
    OUTPUT_DIR ${PIO_OUTPUT_DIR}
)

target_sources(${TARGET_NAME} PRIVATE
        main.c
        ws2815_control_dma.c
        network.c
        wizchip_custom.c
        led_pattern.c
        telnet.c
        partition.c
        efu_update.c
        utility.c
        flash_cfg.c
        vl53l8cx_drv.c
        vl53l8cx_api.c
        vl53l8cx_platform.c
        vl53_diag.c
        )

# not needed # file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/generated)
# Generate the PIO header file from the PIO program
#pico_generate_pio_header(${TARGET_NAME} 
#        ${CMAKE_CURRENT_LIST_DIR}/ws2815.pio OUTPUT_DIR 
#        ${CMAKE_CURRENT_BINARY_DIR}/generated
#        )

# SYSTEM didn't help
target_include_directories(${TARGET_NAME} PRIVATE
        ${PIO_OUTPUT_DIR}                       # see: # ${CMAKE_CURRENT_BINARY_DIR}/generated
        # ${CMAKE_CURRENT_LIST_DIR}               # for local headers
        # ${CMAKE_CURRENT_SOURCE_DIR}
        # ${CMAKE_CURRENT_BINARY_DIR}

        # ${CMAKE_SOURCE_DIR}/libraries
        ${CMAKE_SOURCE_DIR}/libraries/port/ioLibrary_Driver/inc
)

set_source_files_properties(
    wizchip_custom.c
    network.c
    main.c
    efu_update.c
    telnet.c
    PROPERTIES COMPILE_OPTIONS -Wno-unused-function
)

# and make sure the folder exists but ignored by Git
file(MAKE_DIRECTORY ${PIO_OUTPUT_DIR})

# pull in common dependencies and additional spi hardware support
target_link_libraries(${TARGET_NAME} PRIVATE
        pico_stdlib
        hardware_spi
        hardware_i2c
        hardware_dma            # added for DMA support
        hardware_pio            # added for PIO support
        ETHERNET_FILES          # libraries/CMakeLists.txt:2:add_library(ETHERNET_FILES STATIC)
        IOLIBRARY_FILES         # port/CMakeLists.txt:2:add_library(IOLIBRARY_FILES STATIC)
        LOOPBACK_FILES          # libraries/CMakeLists.txt:110:add_library(LOOPBACK_FILES STATIC)
        pico_bootrom
        hardware_flash
        boot_uf2_headers
        hardware_clocks         # ??? for setting clock speeds
        )

#add_custom_command(OUTPUT ${CMAKE_CURRENT_LIST_DIR}/generated/ws2812.py
#        DEPENDS ${CMAKE_CURRENT_LIST_DIR}/ws2812.pio
#        COMMAND pioasm -o python ${CMAKE_CURRENT_LIST_DIR}/ws2812.pio ${CMAKE_CURRENT_LIST_DIR}/generated/ws2812.py
#        VERBATIM)

add_custom_target(show_pio_headers_${TARGET_NAME}
    COMMAND ${CMAKE_COMMAND} -E echo "Headers generated in: ${CMAKE_CURRENT_BINARY_DIR}/generated"
)

enable_strict_warnings(${TARGET_NAME})

# Then suppress SDK warnings properly:
target_compile_options(pico_stdlib INTERFACE -Wno-sign-conversion)
# And vendor:
target_compile_options(IOLIBRARY_FILES PRIVATE -Wno-unused-function)


pico_embed_pt_in_binary(${TARGET_NAME} ${CMAKE_CURRENT_LIST_DIR}/../w6100_partitions.json)
# create absolute uf2, and package in flash, use it for only first load on board
# pico_set_uf2_family(${TARGET_NAME} "absolute")
# (For an application image) set the UF2 family to rp2350-arm-s
# pico_set_uf2_family(${TARGET_NAME} "rp2350-arm-s")

# This produces the packaged UF2 that preserves the partition table metadata and lets the boot ROM + picotool keep the table intact.
# pico_package_uf2_output(${TARGET_NAME})
# Do not flash the raw .bin for a partitioned setup. Use the packaged UF2 generated by the step above.
# sudo picotool load -x build/stairs_ws2815/proj_stairs_ws2815.uf2


pico_enable_stdio_usb(${TARGET_NAME} 1)
pico_enable_stdio_uart(${TARGET_NAME} 0)        # to use Debug Probe via UART


# create map/bin/hex file etc.
pico_add_extra_outputs(${TARGET_NAME})          # this function delares that you want a UF2 file to be generated

